--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/firemonkey-browser": "^2.62.0",
     "eslint-config-greasemonkey": "^1.0.1",
     "ol": "^7.5.1"
   },
@@ -20,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/mveygman/WME-LaneTools/issues"
   },
-  "homepage": "https://github.com/mveygman/WME-LaneTools#readme"
+  "homepage": "https://github.com/mveygman/WME-LaneTools#readme",
+  "devDependencies": {
+    "prettier": "^3.0.2"
+  }
 }
