--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/mveygman/WME-LaneTools#readme",
   "dependencies": {
     "@types/firemonkey-browser": "^2.62.0",
+    "clang-format": "^1.8.0",
     "prettier": "^3.0.2"
   }
 }
